change font Noto+Serif+TC&display

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 
 <html>
+<!--head存放網頁的資料 像是title,meta,style-->
 <head>
     <title>POPCAT CLASSIC</title>
+<!--    SEO 搜尋引擎最佳化 用燈塔去看-->
     <meta name="author" content="Joshua O'Sullivan, Freddy Heppell, Edward Hails">
-
+<!--文間編碼是UTF-8-->
     <meta charset="UTF-8">
 
     <meta name="msapplication-TileColor" content="#b721ff">
     <meta name="theme-color" content="#b721ff">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet">
+
 
     <style>
         html { height:100%; overflow:hidden; }
@@ -58,7 +64,7 @@
             -webkit-text-stroke-color: black;
             font-weight:900;
             font-size:80px;
-            font-family: 'Nunito', sans-serif;
+            font-family: 'Noto Serif TC', sans-serif;
             word-wrap: break-word;
         }
         @media(min-width:1000px) {
